# DaisyExamples

./: CMakeLists.txt  Delete-Makefiles.ps1  STM32H750IB_flash.lds  syscalls.c  toolchain.cmake
patch/EnvelopeOscillator/: CMakeLists.txt  README.md
patch/FractalZoom/: FractalZoom.cpp
patch/JustInTone/: JustInTone.cpp  Makefile  README.md
patch/Noise/: CMakeLists.txt  Noise.cpp
patch/PluckEcho/: CMakeLists.txt  PluckEcho.cpp
patch/Randos/: Makefile  README.md  Randos.cpp
patch/Sequencer/: CMakeLists.txt  Sequencer.cpp
pod/Drums/: CMakeLists.txt  Drums.cpp
pod/EuclideanDrums2/: CMakeLists.txt  EuclideanDrums2.cpp
pod/FractalZoom/: FractalZoom.cpp  Makefile  README.md
